# vlc-rs2

./: Cargo.toml  README.md
libvlc-sys/: Cargo.toml  bindings.rs  build.rs
libvlc-sys/src/: lib.rs
src/: core.rs  enums.rs  lib.rs  media.rs  media_player.rs
