[package]
name = "vlc-rs2"
version = "0.4.0"
authors = ["T. Okubo <t.okubo.rx78+github@gmail.com>"]

description = "Rust bindings for libVLC media framework. Fork of vlc-rs with updated libvlc-sys."
keywords = ["libVLC", "bindings", "multimedia"]
categories = ["external-ffi-bindings", "multimedia"]
documentation = "https://docs.rs/vlc-rs"
repository = "https://code.videolan.org/videolan/vlc-rs"
homepage = "https://code.videolan.org/videolan/vlc-rs"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70"

[lib]
name = "vlc"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"
libvlc-sys = { path = "libvlc-sys" }

[features]
default = ["bindgen", "pkg_config"]
vendor = ["libvlc-sys/vendor"]
pkg_config = ["libvlc-sys/pkg_config"]
bindgen = ["libvlc-sys/bindgen"]
