[package]
name = "libvlc-sys"
version = "0.2.1"
authors = ["T. Okubo <t.okubo.rx78+devel@gmail.com>"]

description = "libVLC C API"
keywords = ["libVLC", "bindings"]
categories = ["external-ffi-bindings", "multimedia"]
documentation = "https://docs.rs/vlc-rs"
repository = "https://code.videolan.org/videolan/vlc-rs"
homepage = "https://code.videolan.org/videolan/vlc-rs"
license = "MIT"
edition = "2021"
build = "build.rs"

[lib]
name = "vlc_sys"
crate-type = ["rlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = { version = "0.72", optional = true }
pkg-config = { version = "0.3", optional = true }
fs_extra = {version = "1", optional = true}

[features]
default = []
macos_sdk = [] # Using MacOS SDK archive https://artifacts.videolan.org/vlc/nightly-macos-arm64/20250612-0413/vlc-macos-sdk-4.0.0-dev-arm64-52ed2542.tar.gz
vendor = ["bindgen"]
runtime = ["dep:fs_extra"]
pkg_config = ["dep:pkg-config"]
bindgen = ["dep:bindgen"]
